2002-02-22  David Mosberger  <davidm@hpl.hp.com>

	* config/tc-ia64.c (dot_restore): Issue error message of epilogue
	count exceeds prologue count.
	(md_show_usage): Describe -mconstant-gp and -mauto-pic.
	(unwind.label_prologue_count): New member.

	Based on a patch by Hans Boehm <hboehm@hpl.hp.com>:

	(get_saved_prologue_count): New function.
	(save_prologue_count): New function.
	(free_saved_prologue_count): New function.
	(dot_label_state): Record state label by calling save_prologue_count().
	(dot_copy_state): Restore prologue count by calling
	get_saved_prologue_count().
	(generate_unwind_image): Free up list of saved prologue
	counts by calling free_saved_prologue_counts().

2002-02-21  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (md_parse_option): Complain about invalid -mabi
	option input.

2002-02-18  Daniel Jacobowitz  <drow@mvista.com>

	* config/obj-coff.h: Check !target_big_endian, not shl, for coff-sh.

2002-02-18  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* config/tc-hppa.c (hppa_fix_adjustable): Don't adjust final types
	that implicitly use LR and RR selectors.

2002-02-16  Nick Clifton  <nickc@cambridge.redhat.com>

	* doc/as.texinfo (Machine Dependencies): Fix typo: MMIX used
	instead of CRIS.

2002-02-15  Chris Demetriou  <cgd@broadcom.com>

        * config/tc-mips.c (md_estimate_size_before_relax): Really
	make sure we treat weak like extern only for ELF.  (Fixes
	patch from 2001-07-25.)

2002-02-15  Ben Elliston  <bje@redhat.com>

	* doc/as.texinfo: Add duplicate directory entry so that "info gas"
	works as expected.

Fri Feb 15 15:18:51 CET 2002  Jan Hubicka  <jh@suse.cz>

	* i386.c (md_assemble): Support 32bit address prefix.
	(i386_displacement): Likewise.
	(i386_index_check): Accept 32bit addressing in 64bit mode.

2002-02-15  Hans-Peter Nilsson  <hp@bitrange.com>

	* NEWS: Mention support for MMIX.

2002-02-13  Chris Demetriou  <cgd@broadcom.com>
