@@ -1,4 +1,4 @@
-@c Copyright 2001
+@c Copyright 2001, 2002
 @c Free Software Foundation, Inc.
 @c This is part of the GAS manual.
 @c For copying conditions, see the file as.texinfo.
@@ -34,31 +34,40 @@ The following table lists all available PowerPC options.
 
 @table @code
 @item -mpwrx | -mpwr2
-Generate code for IBM POWER/2 (RIOS2).
+Generate code for POWER/2 (RIOS2).
 
 @item -mpwr
-Generate code for IBM POWER (RIOS1)
+Generate code for POWER (RIOS1)
 
 @item -m601
-Generate code for Motorola PowerPC 601.
+Generate code for PowerPC 601.
 
 @item -mppc, -mppc32, -m603, -m604
-Generate code for Motorola PowerPC 603/604.
+Generate code for PowerPC 603/604.
 
 @item -m403, -m405
-Generate code for Motorola PowerPC 403/405.
+Generate code for PowerPC 403/405.
+
+@item -m7400, -m7410, -m7450, -m7455
+Generate code for PowerPC 7400/7410/7450/7455.
 
 @item -mppc64, -m620
-Generate code for Motorola PowerPC 620.
+Generate code for PowerPC 620/625/630.
 
 @item -mppc64bridge
 Generate code for PowerPC 64, including bridge insns.
 
 @item -mbooke64
-Generate code for 64-bit Motorola BookE.
+Generate code for 64-bit BookE.
 
 @item -mbooke, mbooke32
-Generate code for 32-bit Motorola BookE.
+Generate code for 32-bit BookE.
+
+@item -maltivec
+Generate code for processors with AltiVec instructions.
+
+@item -mpower4
+Generate code for Power4 architecture.
 
 @item -mcom
 Generate code Power/PowerPC common instructions.
